Fixed overflow bug

--- a/frontend/src/app/widgets/popup/popup.component.scss
+++ b/frontend/src/app/widgets/popup/popup.component.scss
@@ -25,6 +25,8 @@
         padding: 1em min(2em, 5%);
         border-radius: 25px;
         box-shadow: 0 0 10px 2px #00000080;
+        max-height: 90vh;
+        overflow: auto;
 
         .header {
             display: flex;
